# z80-mbc2-emu

./: .gitignore  Cargo.toml  README.md  download.bat  download.sh  release.sh
src/: console_unix.rs  console_windows.rs  filesystem.rs  images.rs  main.rs  mbc2_machine.rs
